--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -10,10 +10,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Setup Pages
-        uses: actions/configure-pages@v5
+      - uses: actions/checkout@v4
       - name: Use Node.js v22
         uses: actions/setup-node@8f152de45cc393bb48ce5d89d36b731f54556e65 # v4
         with:
@@ -22,17 +19,22 @@ jobs:
           node-version: 22
       - run: npm install
       - run: npm run build
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: dist/
+      # dist dir
   deploy:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
+      - uses: actions/checkout@v4
+        with:
+          repository: 'paulmillr/apps'
+          token: ${{ secrets.GH_PAGES_APPS_PAT }}
+          path: apps-pages
+      - run: |
+          ls -la
+          mv dist apps-pages/nostr
+          cd apps-pages
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git add .
+          git commit -m "deployed"
+          git push
