--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -25,13 +25,17 @@ jobs:
       #     subject-path: built.tar.gz
       - uses: actions/upload-artifact@v4
         with:
+          name: built
           path: built.tar.gz
   deploy:
     runs-on: ubuntu-latest
     needs: build
     steps:
       - uses: actions/download-artifact@v4
-      - run: tar -xf artifact
+        with:
+          name: built
+          path: built.tar.gz
+      - run: tar -xf built.tar.gz
       - uses: actions/checkout@v4
         with:
           repository: 'paulmillr/apps'
