--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -34,7 +34,7 @@ jobs:
       - uses: actions/download-artifact@v4
         with:
           name: built
-          # path: built.tar.gz
+          path: nostr
       - run: ls -la; tar -xf built.tar.gz
       - uses: actions/checkout@v4
         with:
