--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -35,7 +35,7 @@ jobs:
         with:
           name: built
           path: nostr
-      - run: ls -la; tar -xf built.tar.gz
+      - run: ls -la
       - uses: actions/checkout@v4
         with:
           repository: 'paulmillr/apps'
