--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -37,7 +37,21 @@ jobs:
           token: ${{ secrets.GH_PAGES_APPS_PAT }}
           path: apps-pages
       - name: Add files to repositorory, remove previous build
-        run: rm -rf apps-pages/nostr; mv nostr apps-pages
+        run: |
+        echo 1
+        ls -la .
+        ls -la apps-pages
+        rm -rf apps-pages/nostr
+        echo 2
+        ls -la .
+        ls -la apps-pages
+        mv nostr apps-pages
+        echo 3
+        ls -la .
+        ls -la apps-pages
+        echo 4
+        cd apps-pages
+        git status
       - run: |
           cd apps-pages
           git config user.name "github-actions[bot]"
